sass/mosaico/_template-item.scss
.crm-mosaico-template-item {
  background: $crm-mosaico-template-item;
  border: 2px solid $crm-white;
  border-radius: 4px;
  margin: auto;
  opacity: 1;
  width: 165px;
  margin-bottom: 30px;

  &.thumbnail {
    padding: 0;
  }

  &:hover {
    border: 2px solid $brand-primary;
    box-shadow: $crm-mosaico-template-item-shadow;

    .crm-mosaico-template-actions {
      opacity: 1;
    }

    img {
      opacity: 0.66;
    }
  }

  .crm-mosaico-template-image-wrapper {
    background: $crm-mosaico-template-item-wrapper;
    height: 200px;
    overflow: hidden;
    position: relative;

    img {
      height: auto !important;
    }
  }

  .crm-mosaico-template-actions-wrapper {
    bottom: 0;
    display: table;
    height: 100%;
    left: 0;
    position: absolute;
    right: 0;
    text-align: center;
    top: 0;
    width: 100%;
  }

  .crm-mosaico-template-actions {
    display: table-cell;
    opacity: 0;
    transition: opacity 400ms;
    vertical-align: middle;
  }

  .crm-mosaico-template-image-wrapper .crm-mosaico-template-actions .btn {
    float: none !important;
    margin-bottom: 7px;
    width: 100px;
  }

  .crm-mosaico-template-title-wrapper {
    border: 1px solid $crm-mosaico-template-border;
    color: $gray-darker;
    display: block;
    font-weight: 700;
    height: 60px;
    overflow: hidden;
    padding: 10px 5px;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;

    small {
      font-weight: 400;
    }
  }
}

